Finished Users Resource Controller Api
