# app/Http/Requests/Api/Manager/User/UpdateUserRequest.php
@@ -1,12 +1,13 @@
 <?php
 
-namespace App\Http\Requests\Role;
+namespace App\Http\Requests\Api\Manager\User;
 
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
+use Illuminate\Validation\Rules\Password;
 
-class UpdateRoleRequest extends FormRequest
+class UpdateUserRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,9 +25,10 @@ class UpdateRoleRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'name' => ['required', 'string', 'max:255'],
-            'slug' => ['required', 'string', 'max:255', Rule::unique('roles', 'slug')->ignore($this->role)],
-            'permissions' => ['array']
+            'email'     => ['required', 'string', 'email', 'max:255', Rule::unique('users', 'email')->ignore($this->route('id')),],
+            'name'      => ['required', 'string', 'max:255'],
+            'role_id'   => ['required', 'integer', 'exists:roles,id'],
+            'password'  => ['nullable', 'string', 'min:8', 'confirmed', Password::defaults()]
         ];
     }
 }
